Fixed a width carousel bug
Now it's not stretched on 50%...

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3428,7 +3428,7 @@ a.thumbnail:hover {
 .carousel .next, .carousel .prev {
   position: absolute;
   top: 0;
-  width: 50%;
+  width: 100%;
 }
 .carousel .next {
   left: 100%;
